macerror.txt

[3] Building...
  Qt6_DIR: /usr/local/opt/qt@6/lib/cmake/Qt6
  Rust scanner...
   Compiling diskraptor v0.6.1 (/Users/hjh/Documents/GitHub/DiskRaptor/src-tauri)
error[E0425]: cannot find value `sz` in this scope
   --> src/scanner/walker.rs:341:28
    |
341 |             bytes_found += sz;
    |                            ^^
    |
help: the binding `sz` is available in a different scope in the same function
   --> src/scanner/walker.rs:324:21
    |
324 |                 let sz = entry.metadata().map(|m| m.len()).unwrap_or(0);
    |                     ^^

For more information about this error, try `rustc --explain E0425`.
error: could not compile `diskraptor` (lib) due to 1 previous error
hjh@Hansjoergs-Mac DiskRaptor % 
